# DEEPF

./: .replit  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  run_python_backend.py  simple_backend.py  start_backend.py
client/: index.html
client/src/: index.css
client/src/components/: FileUpload.tsx  FrameAnalysis.tsx  ProcessingStatus.tsx  ResultsDisplay.tsx
client/src/components/examples/: FileUpload.tsx  FrameAnalysis.tsx  ProcessingStatus.tsx  ResultsDisplay.tsx
client/src/pages/: Home.tsx
python_backend/: __init__.py  app.py  deepfake_detector.py  face_extractor.py  lightweight_cnn.py  video_processor.py
server/: routes.ts
